--- a/C-programing/第一章 导言.md
+++ b/C-programing/第一章 导言.md
@@ -1,7 +1,5 @@
 #### 1.1 入门
-\\n 回车
-\\b 回退
-\\t 制表符
+\\n 回车 \\b 回退 \\t 制表符
 + 练习1
 ```c
 #include<stdio.h>
@@ -18,21 +16,18 @@ hello word!
 
 #### 1.2  变量与算术表达式
 + int与float类型的取值范围取决于机器
-	int 通常为16位 值-32768~32767
-	float 通常是32为 范围是10^-38~10^38
+	+ int 通常为16位 值-32768~32767
+	+ float 通常是32为 范围是10^-38~10^38
 + 类型
-	char 字符
-	short 短整型
-	long 长整型
-	double 双精度浮点型
+	+ char 字符 short 短整型 long 长整型 double 双精度浮点型
 + printf
-	指明打印宽度 `printf(" %3d %6d\n", fahr, celsius);`
-	fahr占3个数字宽，celsius占6个数字宽
+	+ 指明打印宽度 `printf(" %3d %6d\n", fahr, celsius);`
+	+ fahr占3个数字宽，celsius占6个数字宽
 + 文字知识点
-	while 语句的循环体可以是用花括号括起来的一条或多条语句（如上面的温度转换程 序），也可以是不用花括号包括的单条语句
-	C 编译器并不关心 程序的外观形式
-	printf 函数并不是 C 语言本身的一部分，仅仅是标准库函数中一个有用的函数而已
-	整型和浮点数进行运算，整型会被转换为浮点型
+	+ while 语句的循环体可以是用花括号括起来的一条或多条语句（如上面的温度转换程 序），也可以是不用花括号包括的单条语句
+	+ C 编译器并不关心 程序的外观形式
+	+ printf 函数并不是 C 语言本身的一部分，仅仅是标准库函数中一个有用的函数而已
+	+ 整型和浮点数进行运算，整型会被转换为浮点型
  练习
  + 1
 ```c
@@ -113,20 +108,20 @@ main(){
 
 #### 1.4 符号常量
 + 知识点
-	\#define 名字 替换文本
-	符号长乐路通常用大写字母拼写
-	\#define 末尾没有;号
+	+ \#define 名字 替换文本
+	+ 符号长乐路通常用大写字母拼写
+	+ \#define 末尾没有;号
 #### 1.5字符输入/输出
 + 
 + 知识点
-	按照字符流的方式处理
-	c = getchar() c将包含输入流的下一个字符
-	putchar() 打印一个字符
-	EOF 定义在头文件中，是个整型数
-	不等于运算符!=的 优先级比赋值运算符=的优先级要高
-	这两种形式在表达式中具有不同的值，但++nc 与 nc++都使 nc 的值增加 1。
-	%ld 告诉 printf 函数其对应的参 数是 long 整型
-	单引号中的字符表示一个整型值
+	+ 按照字符流的方式处理
+	+ c = getchar() c将包含输入流的下一个字符
+	+ putchar() 打印一个字符
+	+ EOF 定义在头文件中，是个整型数
+	+ 不等于运算符!=的 优先级比赋值运算符=的优先级要高
+	+ 这两种形式在表达式中具有不同的值，但++nc 与 nc++都使 nc 的值增加 1。
+	+ %ld 告诉 printf 函数其对应的参 数是 long 整型
+	+ 单引号中的字符表示一个整型值
 练习1-6
 ```c
 #include<stdio.h>
@@ -134,6 +129,7 @@ main(){
 main(){
 
     printf("%d\n",(getchar() != EOF));
+  
 
 }
 /*
@@ -253,3 +249,8 @@ int main(){
 
 }
 ```
+#### 1.6 数组
+#### 1.7 函数
++ 知识点
+	+ 函数为计算的封装提供了一种简便的方法
+	+ 标准库中提供了一个计算 x y的函数 pow(x, y)。
