--- a/面试题/面经，整理问题，总结学习.md
+++ b/面试题/面经，整理问题，总结学习.md
@@ -14,24 +14,13 @@
 + 这个问题太常见了，稍微总结一下
 + 一般要清内存了，可以跑一下scan*这个记得去看一下*，来触发过期
 	+ 参考连接：https://zhuanlan.zhihu.com/p/152643114
-	+ 过期策略
-		+ 定期删除 + 惰性删除
-		+ 定期删除是指redis默认每隔100ms就随机抽一些设置了过期时间的key，实际上是随机抽取一些key来检查和删除，因为性能问题。定期删除就会导致很多过期的key不会被删除掉，于是就有了惰性删除，当获取一个key的时候，redis会检查是否过期，如果过期了就不返回任何东西，删除掉key，这也是scan清缓存的原理。
-		+ 不过就算是这样，依然会有大量过期的key堆积在内存里面，导致内存耗尽，所以得有内存淘汰策略
-	+ 内存淘汰
-		+ 总结：lru，random，ttl
-		+ noeviction：内存不够，写入数据直接报错
-		+ allkeys-lru：内存不够，在键空间里移除最近最少使用的key，常用策略
-		+ allkeys-random：随机移除
-		+ volatile-lru：在设置了过期时间里的key中，移除最近最少使用的key
-		+ volatile-random：在设置了过期时间的key中，随机移除
-		+ volatile-ttl：在设置里过期时间的key中，移除更早设置过期时间的key
-	+ LRU算法
-		+ 大概如下：维护一个有序单链表，越靠近链表尾部的节点是越早之前访问的。当有一个新的数据被访问时，我们从链表头开始顺序遍历链表：如果此数据之前已经被缓存在链表中了，我们遍历得到这个数据对应的节点，并将其从原来的位置删除，然后再插入到链表的头部。如果没在链表里：缓存没满，直接放在表头，满了，删除尾结点，放在表头，其实还是很简单的，但是需要手动实现一下！
+	+ 总结：[[Redis 过期策略和淘汰策略]]
 
 ### 数据库
 ##### sql索引优化的问题
 + 我懂的：查sql的时候可以根据别的字段只查主键的范围再进行查询，某些情况下可以使用force on来强制依赖某一个key，使用explain。
++ 参考链接：https://www.cnblogs.com/songwenjie/p/9410009.html
+	+ 总结：[[Mysql-索引基础]]
 
 ### 消息队列
 ##### MQ底层数仓
