--- a/面试题/面经，整理问题，总结学习.md
+++ b/面试题/面经，整理问题，总结学习.md
@@ -21,6 +21,16 @@
 + 我懂的：查sql的时候可以根据别的字段只查主键的范围再进行查询，某些情况下可以使用force on来强制依赖某一个key，使用explain。
 + 参考链接：https://www.cnblogs.com/songwenjie/p/9410009.html
 	+ 总结：[[Mysql-索引基础]]
+##### 一个update语句的执行过程
++ 连接器检查权限->有权限清楚查询缓存->判断sql语句是否正确->确定执行方案 比如使用id主键索引->判断是否有写权限 调用引擎层提供的接口，返回执行结果
++ 与查询语句不同的是，还涉及日志模块redo log和bin log
++ 执行流程：取id=2这一行数据->数据页是否在内存中 是返回，不是->磁盘读入内存->返回行数据后写入新行并更新到redolog内存->写binlog->提交事务
++ redo log：先写日志 再写磁盘，WAL技术 即组提交技术，可以大幅度降低磁盘IO
+	+ innodb会先写到redo log里面并更新内存，这个时候就算完成了，再在适当的时候更新到磁盘
++ binlog 归档日志
+	+ server层日志，记录原始逻辑。有三种模式：statement 记录sql语句，row 记录更新行的内容，mixed 前两者结合根据执行的每一条具体sql来区分记录
+	+ 一般使用row模式，因为要保持主从同步
++ redo log是物理日志 binlog是逻辑日志。redolog是innoDB特有的。Mysql的高可用依赖于binlog
 
 ### 消息队列
 ##### MQ底层数仓
@@ -34,3 +44,7 @@
 	+ **runtime.GC** 手动调用进行强制性的垃圾回收
 	+ **Goexit** 退出当前goroutine (。。感觉直接return也没啥区别，defer语句都会执行)
 	+ **Gosched** 当前协程让出cpu，这个一般也用不到，因为根本不知道是哪个协程在用cpu
+##### go profile工具
++ 定时采样 收集cpu，内存等信息；
++ 参考：https://www.jianshu.com/p/4e4ff6be6af9
++ [[Go pprof使用]]
