--- a/面试题/面经，整理问题，总结学习.md
+++ b/面试题/面经，整理问题，总结学习.md
@@ -48,3 +48,14 @@
 + 定时采样 收集cpu，内存等信息；
 + 参考：https://www.jianshu.com/p/4e4ff6be6af9
 + [[Go pprof使用]]
+
+### 网络
+##### http和tcp有什么区别
++ 我的回答：
+	+ http建立在tcp协议之上，tcp是传输层协议，http是应用层协议。tcp相当于io流，http规定了数据是如何传输的，即如何包装数据，http协议是短连接，而tcp协议没有这个限制。
++ 补充：
+	+ 常用词：
+	+ 多路复用：多个请求stream共享一个TCP连接，即多个HTTP请求共享一个TCP连接
+	+ 长连接：客户端和服务端连接后不断开，客户端再次访问时，继续使用这一条流通道
+	+ 短连接：建立连接发完数据后立马断开，下次要取数据时，再次建立连接
+	+ TCP长连接需要自己去维护一套 登录-心跳策略，HTTP去实现websocket长连接时只需要在请求头加入keep-alive:true即可
