--- a/面试题/面经，整理问题，总结学习.md
+++ b/面试题/面经，整理问题，总结学习.md
@@ -59,3 +59,5 @@
 	+ 长连接：客户端和服务端连接后不断开，客户端再次访问时，继续使用这一条流通道
 	+ 短连接：建立连接发完数据后立马断开，下次要取数据时，再次建立连接
 	+ TCP长连接需要自己去维护一套 登录-心跳策略，HTTP去实现websocket长连接时只需要在请求头加入keep-alive:true即可
+##### netstat的time_wait和close_wait
++ `netstat -anp | grep TIME_WAIT`
