--- a/面试题/面经，整理问题，总结学习.md
+++ b/面试题/面经，整理问题，总结学习.md
@@ -61,3 +61,7 @@
 	+ TCP长连接需要自己去维护一套 登录-心跳策略，HTTP去实现websocket长连接时只需要在请求头加入keep-alive:true即可
 ##### netstat的time_wait和close_wait
 + `netstat -anp | grep TIME_WAIT`
+
+#### 系统
+##### fork函数的实现原理
++ fork()系统调用通过复制一个现有的进程来创建一个全新的进程。
