--- a/C K&B/第二章 类型、运算符与表达式.md
+++ b/C K&B/第二章 类型、运算符与表达式.md
@@ -8,4 +8,9 @@
 	+ float 单精度浮点型
 	+ double 双精度浮点型
 #### 2.3常量
-+ 
++ 以f或F结尾表示Float类型，l或L表示long double类型，u或U结尾表示无符号常量
++ 带前缀0的整数常量表示它为八进制形式，0x或0X则表示为十六进制
+	+ 037 = 31 = 0x1f 
++ \ooo八进制 \xhh十六进制
+
+#### 先去看c primer plus
