--- a/面试题/面经，整理问题，总结学习.md
+++ b/面试题/面经，整理问题，总结学习.md
@@ -15,6 +15,12 @@
 + 一般要清内存了，可以跑一下scan*这个记得去看一下*，来触发过期
 	+ 参考连接：https://zhuanlan.zhihu.com/p/152643114
 	+ 总结：[[Redis 过期策略和淘汰策略]]
+##### redis的存储结构？
++ string list zset set hash
+##### redis的setnx底层怎么实现的？
++ 根据hash值保证原子性
++ 单线程redis，多个进程之间抢锁 nginx
+
 
 ### 数据库
 ##### sql索引优化的问题
@@ -67,3 +73,13 @@
 #### 系统
 ##### fork函数的实现原理
 + fork()系统调用通过复制一个现有的进程来创建一个全新的进程。
+
+### 数据结构
+##### 实现map的方法除了哈希还有哪些？
++ TreeMap
+	+ 基于红黑树实现，得到的结果可以经过自定义的排序类进行排序
++ HashMap
+	+ 速度最快
++ LinkedHashMap
+	+ 遍历迭代速度更快
++ ConcurrentHashMap
