--- a/Book Note/C K&B/第二章 类型、运算符与表达式.md
+++ b/Book Note/C K&B/第二章 类型、运算符与表达式.md
@@ -12,5 +12,7 @@
 + 带前缀0的整数常量表示它为八进制形式，0x或0X则表示为十六进制
 	+ 037 = 31 = 0x1f 
 + \ooo八进制 \xhh十六进制
-
-#### 先去看c primer plus
++ 字符串的内部表示使用一个空字符'\0'作为串的结尾
+	+ 'x'与"x"是不同的，'x'是一个整数的ascii，而"x"包含一个x和一个结束符'\0'
+#### 2.4声明
+所有变量都必须先声明后使用，尽管某些变量可以通过上下文隐式地声明。
