--- a/Book Note/C K&B/第二章 类型、运算符与表达式.md
+++ b/Book Note/C K&B/第二章 类型、运算符与表达式.md
@@ -16,3 +16,8 @@
 	+ 'x'与"x"是不同的，'x'是一个整数的ascii，而"x"包含一个x和一个结束符'\0'
 #### 2.4声明
 所有变量都必须先声明后使用，尽管某些变量可以通过上下文隐式地声明。
+#### 2.7 类型转换
+一般来说，自动转换是指把“比较窄的”操作数转换为“比较宽的”操作数
+表达式中 float 类型的操作数不会自动转换为 double 类型，这一点与最初的定 义有所不同
+#### 2.9 按位运算符
+C 语言提供了 6 个位操作运算符。这些运算符只能作用于整型操作数，即只能作用于带符 号或无符号 char、short、int、long 类型： & 按位与（AND） | 按位或（OR） ^ 按位异或（XOR） << 左移 >> 右移 ~ 按位求反（一元运算符）
