--- a/面试/个人简历/个人简历.md
+++ b/面试/个人简历/个人简历.md
@@ -13,7 +13,7 @@
 		+  主要负责一些服务端内部接口，运营后台工具，数据报表相关需求的开发；
 		+  从算法部门迁移意图识别服务至曲库，使用的fasttext开源模型，并对训练数据进行优化、架设rpc服务供搜索服务调用；
 		+  爬取musicbrainz网站音乐元数据，设计表结构存储，保证爬虫程序长期稳定运行；
-	+ **互娱服务端 23.1~至今**
+	+ **互娱服务端 23.1~24.1
 		- 主要负责appStarMaker的语音房/直播、送礼、家族每日任务、feed弹窗相关的业务需求开发；
 		- 使用rpc聚合并发请求其他隔离服务中的主页弹窗接口，便于管理app弹窗；
 		- 与web后端组合作，开发app活动-家族挂机闯关游戏，负责用户装备系统、个人数值、货币模块的设计与开发，使用wire依赖注入式架构开发；
