--- a/考研/408/数据结构/链表.md
+++ b/考研/408/数据结构/链表.md
@@ -1,3 +1,5 @@
+### 线性表
+线性表的实现：顺序表(数组)，和链表，栈
 ### 单向链表
 + 后插
 	+ 获取节点前要先new一个节点并赋值头结点，"不能改变链表中原有的结构"。如果不带头结点，插入到第一个节点时要特殊处理；
@@ -105,3 +107,5 @@ int main() {
 	InitList(L);
 	return 0;
 }```
+### 双链表
+prior 前向指针，next 后向指针，头结点的prior一定永远指向NULL
