--- a/面试/面经，整理问题，总结学习.md
+++ b/面试/面经，整理问题，总结学习.md
@@ -1,4 +1,35 @@
 题目:https://www.nowcoder.com/discuss/353157951986802688
+```shell
+1. 前端刷题&系统设计： GreatFrontEnd: https://www.greatfrontend.com/
+是前Meta的前端大佬建的，似乎和我前年推荐的BFE.dev(https://bigfrontend.dev/)有点渊源，但是这个网站的答案的质量非常高，尤其是frontend system design部分，比youtube上的几个视频讲的要跟深一点，讲的也很详细，完全足够面试里面应对考官的追问。
+除了SD之外，Coding和Quiz我刷了差不多1/3, 建议有vanilla JS的题出了用framework，也最好用vanilla JS写一遍，还有DOM manipulation分支下的题也可以都刷一遍。这些都是平常工作中用不到的，但是面试很大概率被考
+
+2. 前端系统设计： https://www.youtube.com/@FrontEndEngineer/videos
+
+相对GreatFrontEnd讲的要浅一些，不过油管主明显技术精进了，season 2要比seaon 1的质量更高。GFE上有些文章还没放出来，这个channel里刚好有cover，查漏补缺
+
+3.刷题：https://www.techinterviewhandbook.org/grind75
+前年有刷过400多道题，但是脑子笨，忘的差不多了，今年要重新抓起来，就先刷了这个，熟悉一下各种题型，再根据哪个算法记的最模糊查漏补缺
+
+4. 后端系统设计： https://blog.bytebytego.com/p/system-design-interview-books-volume 
+Alex XU大佬的两本书，昨天刚看完第一本，今天第二册看到一半。第一册比较浅，但是其实感觉第一本第一章的内容都已经够应付绝大多数澳洲本土公司的SD轮了
+
+5.AI Interview Training: https://bugfree.ai/
+应该是一个用Open AI接口的站，思路比较有意思，就是可以帮忙改简历，写BQ模版。具体用处的话还没看到，因为截止目前我的所有culture和BQ轮都面的屎一样，感觉还要再摸索摸索别的好工具
+
+6. React: https://react.dev/learn/describing-the-ui
+没错就是官方文档，我已经忘了多久没查过react的官方文档了，昨天因为查useContext的时候发现官方改版了，新的doc干货好多。以前特别讨厌面试里被问到八股文，现在发现八股文的答案其实都在官方文档里，只要看过就能有印象
+
+7. Refactoring & Design Patterns: https://refactoring.guru/
+跟面试本身关系不大，但是感觉看了挺有用的，有的时候clean code也是评分标准之一
+
+8. Javascript: https://javascript.info/
+JS的八股都在里面了，建议先读完这个再去刷GFE的题，基本就能手撕绝大多数的js coding和browser coding轮了
+
+9. BQ：https://www.youtube.com/watch?v=H_KGM0i9jkA&list=PLLucmoeZjtMR990BPePcn5WgoCM_OX0YB
+
+BQ目前算是我面试过程中最大的障碍了，今天搜面经看到很多人推荐的这个小哥的视频，里面很多问题他都给了解题思路和example。目前我自己还没看几个，希望看完能对BQ应答自如
+```
 ### 服务框架
 ##### rpc微服务框架
 + 一些概念
@@ -43,6 +74,7 @@
 + ？没听过，MQ和Kafka都要重新研究一下，kafka遇到的问题需要总结一下
 
 ### Golang代码
+#### map slice goroutine channel mutex
 ##### runtime包里的方法 
 + 概念
 	+ **GOMAXPROCS** 设置最大CPU运行数量，这个知道；最好在操作程序的环境变量中设置，而不是在程序中调用，会引起”Stop the World"
