--- a/leetcode/169. 多数元素.md
+++ b/leetcode/169. 多数元素.md
@@ -17,3 +17,23 @@ func majorityElement(nums []int) int {
     return maxKey
 }
 ```
+
+多数投票法
+```go
+func majorityElement(nums []int) int {  
+   var count, candidate int  
+   for _, v := range nums {  
+      if count == 0 {  
+         candidate = v  
+         count = 1  
+         continue  
+      }  
+      if candidate == v {  
+         count++  
+      } else {  
+         count--  
+      }  
+   }  
+   return candidate  
+}
+```
