--- a/面试/个人简历/个人简历.md
+++ b/面试/个人简历/个人简历.md
@@ -15,11 +15,24 @@
 		+  爬取musicbrainz网站音乐元数据，设计表结构存储，保证爬虫程序长期稳定运行；
 	+ **互娱服务端 23.1~24.1
 		- 主要负责appStarMaker的语音房/直播、送礼、家族每日任务、feed弹窗相关的业务需求开发；
-		- 使用rpc聚合并发请求其他隔离服务中的主页弹窗接口，便于管理app弹窗；
-		- 与web后端组合作，开发app活动-家族挂机闯关游戏，负责用户装备系统、个人数值、货币模块的设计与开发，使用wire依赖注入式架构开发；
-		- 根据产品策略开发语音房大转盘游戏房间导流弹窗，包括频率限制、房间状态优先级判断逻辑；
-		- 开发语音房/直播间主播弹幕屏蔽词功能，客户端通过短连接设置屏蔽词，在长连接下发消息中根据屏蔽词进行屏蔽用户弹幕；
-		- 开发暴击礼物需求，送礼时随机暴击热度倍数，使用kafka消息异步处理送礼后的逻辑；
+### 项目经验
+- **app主页弹窗聚合**
+- 服务端开发
+- 根据多个弹窗的优先级并发请求其他rpc微服务中的方法，实现低延迟接口聚合，便于app弹窗的优先级管理；
+- **挂机闯关游戏-热血怪兽**
+- 服务端开发
+- app内置web游戏，用户可以通过挂机获得经验升级，打怪闯关获得奖励，1v1pvp对战；
+- 负责游戏内用户的装备系统（合成、升级、分解），个人属性数值（pve、pvp数值计算），货币模块，段位分pvp匹配战斗，任务模块的设计与开发；
+- 每周一通过用户请求自动重置用户段位分段，并发放段位任务奖励；redis实现根据用户段位分pvp匹配，实时动态的全服、大区、好友排行榜；
+- **大转盘房间**
+- 服务端开发
+- 多人语音房房间模式，用户通过下注转盘获得金币返利；
+- 负责服务端长连接、短连接的业务代码开发，与unity前端、安卓、ios合作联调；
+- 通过延时队列（redis）控制转盘游戏流程，在对应环节发送长连接消息给unity实现双端转盘数据同步；
+- **语音房/直播弹幕屏蔽词**
+- 服务端开发
+- 主播可以设置屏蔽关键词，触发关键词时只有发送弹幕的用户自己可以看到弹幕；
+- 客户端通过短连接请求设置屏蔽词保存，在长连接下发的弹幕消息中根据屏蔽词命中来过滤用户的弹幕消息；
 ### 技能
 - 熟悉Go语言服务端完整开发部署流程，包括Gin框架restful风格开发，grpc微服务架构开发；
 - 熟悉Go语言特性，包括并发控制、抽象接口定义、底层数据结构、goroutine协程等，能够开发多协程并发程序；
