--- a/考研/数学/第一章.函数/1.2极限.md
+++ b/考研/数学/第一章.函数/1.2极限.md
@@ -47,3 +47,8 @@
 ![[Pasted image 20240413151952.png]]
 + 洛必塔法则求极限
 ![[Pasted image 20240413162241.png]]
++ 利用泰勒公式求极限
+![[Pasted image 20240417161820.png]]
++ 夹逼准则
++ 利用单调有界准则
+	+ 先证明单调有界（证明极限存在）（后项减前项或后向比前项），再令后项极限为a 前项的极限则也为a，代入与前项的关系求出a的值
