函数极限连续

--- a/考研/数学/第一章.函数/1.2极限.md
+++ b/考研/数学/第一章.函数/1.2极限.md
@@ -43,12 +43,14 @@
 + 常用的等价无穷小
 ![[Pasted image 20240412161118.png]]![[Pasted image 20240412163748.png]]
 + 利用有理运算法则求极限
-![[Pasted image 20240413145659.png]]
+ ]]
 ![[Pasted image 20240413151952.png]]
 + 洛必塔法则求极限
 ![[Pasted image 20240413162241.png]]
 + 利用泰勒公式求极限
 ![[Pasted image 20240417161820.png]]
+![[Pasted image 20240423185658.png]]
 + 夹逼准则
 + 利用单调有界准则
 	+ 先证明单调有界（证明极限存在）（后项减前项或后向比前项），再令后项极限为a 前项的极限则也为a，代入与前项的关系求出a的值
+#### 无穷小量阶的比较
