--- a/面试/个人简历/个人简历.md
+++ b/面试/个人简历/个人简历.md
@@ -1,6 +1,11 @@
 ### 个人信息
-+ 2000-10 男 | 1年经验
++ 2000-10 男 | 2年经验
 + 15380250951 | 799234763@qq.com
++ 江苏省连云港市
+### 技术栈
+Go，Python，C
+Linux，ISO
+Mysql，Redis，kafka，nginx，ansible
 ### 教育背景
 + 2018.09~2022.07 江苏大学 通信工程（本科）
 	+ 大一计算机学院科协优秀干事，大二计算机学院科协副部长；
