--- a/考研/408/数据结构/3.2队列.md
+++ b/考研/408/数据结构/3.2队列.md
@@ -25,6 +25,16 @@ bool EnQueue(SqQueue *Q,int x) {
 	Q->rear = (Q->rear+1)%MaxSize; 
 	return true;
 } 
+
+// 出队
+bool DeQueue(SqQueue *Q,int *x) {
+	if (Q->rear == Q->front) {
+		return false;
+	}
+	*x = Q->data[Q->front];
+	Q->front = (Q->front + 1) % MaxSize;
+	return true;
+}
 ```
 + 确定判断空判断满的方法
 ![[Pasted image 20240422160932.png]]
