--- a/考研/408/数据结构/3.栈、队列和数组/3.3 栈和队列的应用.md
+++ b/考研/408/数据结构/3.栈、队列和数组/3.3 栈和队列的应用.md
@@ -1,8 +1,11 @@
-+ 考点总结
-![[Pasted image 20240426171657.png]]
-+ 括号匹配问题：栈
+### 括号匹配问题：栈
 ![[Pasted image 20240426154906.png]]
-+ 表达式求值
+### 表达式求值
++ 考点总结
++ 2个元素出栈运算是后面的在前，栈顶元素在后
+![[Pasted image 20240426171657.png]]
+![[Pasted image 20240426180358.png]]
+
 ![[Pasted image 20240426162621.png]]
 中缀转后缀手算方法（左边优先计算）：
 ![[Pasted image 20240426164323.png]]
@@ -10,7 +13,6 @@
 ![[Pasted image 20240426171048.png]]
 + 后缀表达式计算：
 ![[Pasted image 20240426170212.png]]
-+ 用栈实现后缀表达式的计算
-![[Pasted image 20240426170652.png]]
-+ 用栈实现前缀表达式的计算
-![[Pasted image 20240426171352.png]]
+
+### 栈的应用-递归
+![[Pasted image 20240427151732.png]]
