--- a/考研/时间安排.md
+++ b/考研/时间安排.md
@@ -1,7 +1,13 @@
 + 8:00 之前起床
-+ 早 8:30~9:30 英语背单词
-+ 9:30~11:30 数学
-+ 14:00 ~ 17:00 数据结构
-+ 17:00 ~ 19:00 数学
++ 早 8:30~9:00 英语背单词
++ 9:30~11:30 日语
++ 14:00 ~ 17:00 数据结构 + 数学
++ 17:00 ~ 19:00 日语
 + 19:00 ~ 23:00 读英语文献+日语+打游戏
 + 周日休息
+
+|     |     |     |     |
+| --- | --- | --- | --- |
+|     |     |     |     |
+|     |     |     |     |
+|     |     |     |     |
