--- a/考研/时间安排.md
+++ b/考研/时间安排.md
@@ -6,8 +6,37 @@
 + 19:00 ~ 23:00 读英语文献+日语+打游戏
 + 周日休息
 
-|     |     |     |     |
-| --- | --- | --- | --- |
-|     |     |     |     |
-|     |     |     |     |
-|     |     |     |     |
+| 休息时间5~10分钟，自行调整 |         |        |     |     |     |
+| --------------- | ------- | ------ | --- | --- | --- |
+| 8:00~8:30       | 洗漱      | 早饭     | 刷手游 | 背单词 |     |
+| 8:30~9:30       | 英语      | 背单词    | 阅读  |     |     |
+| 9:30~9:40       | 休息      |        |     |     |     |
+| 9:50~10:20      | 日语      | 上日语课   |     |     |     |
+| 10:20~10:30     | 休息      |        |     |     |     |
+| 10:30~11:00     | 日语      |        |     |     |     |
+| 11:00~12:30     | 休息      | 午饭     |     |     |     |
+| 12:30~13:10     | 午睡      |        |     |     |     |
+| 13:10~13:40     | 数学      | 上课     | 刷题  |     |     |
+| 13:40~13:50     | 休息      |        |     |     |     |
+| 13:50~14:10     | 数学/线代   | 上课     | 刷题  |     |     |
+| 14:10~14:20     | 休息      |        |     |     |     |
+| 14:20~14:50     | 数学/线代   | 上课     | 刷题  |     |     |
+| 14:50~15:00     | 休息      |        |     |     |     |
+| 15:00~15:30     | 408     | 上课     |     |     |     |
+| 15:30~15:40     | 休息      |        |     |     |     |
+| 15:40~16:10     | 408     | 上课     |     |     |     |
+| 16:10~16:20     | 休息      |        |     |     |     |
+| 16:20~16:50     | 408/日语  | 上课     |     |     |     |
+| 16:50~17:00     | 休息      |        |     |     |     |
+| 17:00~17:30     | 日语      | 考试信息收集 |     |     |     |
+| 17:30~17:40     | 休息      |        |     |     |     |
+| 17:40~18:10     | 日语      | 上课     |     |     |     |
+| 18:10~19:00     | 休息      | 吃饭     |     |     |     |
+| 19:00~20:00     | 数学/408  | 灵活安排   |     |     |     |
+| 20:00~20:10     | 休息      |        |     |     |     |
+| 20:10~20:40     | 日语      |        |     |     |     |
+| 20:40~20:50     | 休息      |        |     |     |     |
+| 20:50~21:30     | 日语/英语   |        |     |     |     |
+| 21:30~23:00     | game/动漫 |        |     |     |     |
+| 23:00~23:30     | 洗漱上床    |        |     |     |     |
+| 23:30~00:00     | 放松      | 小说     | 动漫  |     |     |
