--- a/考研/修士/日语/0-N2备考.md
+++ b/考研/修士/日语/0-N2备考.md
@@ -5,7 +5,7 @@
 	+ 蓝宝书N4N5语法 N2文法 N2词汇&语法 （语法）
 	+ 单词书：绿宝书
 + 参考类
-	+ 新日本语能力考试完全解析（N2只是百科全书）
+	+ 新日本语能力考试完全解析（N2知识百科全书）
 + 刷题类
 	+ 历年真题
 	+ 红蓝宝书1000题N2文字·词汇·文法 练习+详解
