--- a/考研/408/数据结构/4.串/4.2 模式匹配.md
+++ b/考研/408/数据结构/4.串/4.2 模式匹配.md
@@ -19,3 +19,15 @@
 ![[Pasted image 20240515165430.png]]
 + 利用next数组进行匹配
 ![[Pasted image 20240515165452.png]]
++ next数组
+next[1]无脑写0，next[2]无脑写1
+ ![[Pasted image 20240517161445.png]]
+ next[5] = 2 手算；
+ j=0时特殊处理，i++，j++，j≠0时不匹配时i不变，j变为next数组中的数值
+ ![[Pasted image 20240517162356.png]]
+ 第一步相等也要往后退
+#### KMP算法的进一步优化
+当next数组对应的数值与当前数值相同时，nextval[j] = nextval[next[j]]  即为nextval数组
+![[Pasted image 20240517171023.png]]
+nextval[0]无脑写0
+next数组和nextval数组都是从1开始的
