--- a/考研/数学/第二章导数/2.1导数与微分的概念.md
+++ b/考研/数学/第二章导数/2.1导数与微分的概念.md
@@ -13,3 +13,5 @@
 ![[Pasted image 20240508144757.png]]
 + 使用罗必塔如何判断可以导几次：n-1阶可导，最多可以导到n-1介
 ![[Pasted image 20240508150654.png]]
+### 常考题型
+![[Pasted image 20240521164235.png]]
