--- a/考研/修士/日语/新标日/课本/第二单元/第五课.md
+++ b/考研/修士/日语/新标日/课本/第二单元/第五课.md
@@ -2,12 +2,12 @@
 ![[Pasted image 20240530204320.png]]
 今　いま  *现在*　　　　　　　  今は何時だ
 先週　せんしゅう *上星期*　　　はい　学生ですた　先週までは
-来週　らいしゅう *下星期*　　　次（つぎ）の活動（かつどう）は来週月曜（げつよう）*下次的活动是下周一*
+来週　らいしゅう *下星期*　　　次（つぎ）の活動（かつどう）は来週月曜（げつよう）です　*下次的活动是下周一*
 今週　こんしゅう  *这星期*　　   今週の土曜（どよう）の放課後（ほうかご）*这周周六放学后*
 昨日　きのう                              昨日とは別（べつ）の花　*已非昨日之花*
 明日　あした　　　　　            明日は明日の風（かざ）が吹く（ふく）　*明天有明天的风儿吹（船到桥头自然直）*
-あさって *后天*                             あさって出（で）かけるね　*后天出门*
-おととい *前天*                             昨日も来（き）た、一昨日も来た
+==あさって *后天*                             あさって出（で）かけるね　*后天出门*==
+==おととい *前天*                             昨日も来（き）た、おとといも来た==
 毎日　まいにち　　　　　　　これから毎日、朝（あさ）と晩（ばん）*从今往后每一天，早晨和晚上*
 毎晩　まいばん　　　　　　　毎晩女（おんな）の子（こ）と遊（あそ）んどたら　体力（たいりょく）がもたなくて　*每晚和女孩子玩耍，感觉身体被掏空*
 毎週　まいしゅう　　　　　　毎週毎週十九（じゅうきゅう）ページ（*page页数*）人間（にんげん）業（わざ）じゃない　*每周每周都要画19页，不是人干的活*
@@ -18,6 +18,79 @@
 月曜日に生（う）まれ、火曜日に洗礼（せんれい）を受（う）け、水曜日に結婚し（けっこんし）、木曜日に発病（はつびょう）、金曜日に悪化（あっか）して、土曜日に死んじまって、日曜日に埋められた（うめられた）*星期一出生，星期二接受洗礼，星期三结婚，星期四发病，星期五病种，星期六挂掉，星期天被埋*
 
 今朝　けさ　*今天*　　　　　 　　　　　　　　今朝　歯磨（はみが）いてる時にさ　*今天早上，在刷牙的时候*
-今晩　こんばん　*今晚*　　　　　　　　　　　今晩は僕の部屋に泊まれば（泊まれば　*住下来的话*） *今晚睡在我的房间（如何）*
+今晩　こんばん　*今晚*　　　　　　　　　　　今晩は僕の部屋に泊まれば（とまれば　*住下来的话*） *今晚睡在我的房间（如何）*
 来年　らいねん　；再来年　さらいねん　　　来年も再来年も　ここにいるつもりか　*明年、后年，还打算留在这里面*
 去年　きょねん　；今年　ことし　　　　　　去年と今年の試合（しあい*比赛*）のDVD *去年和今年的比赛DVD*
+夜　よる*晚上，夜里*　　　　　　　　　　　   明日の夜は　外（そと）に出（で）るな　*明天晚上被出门*
+==朝　あさ*早晨*==  ；　晩　ばん　*晚上*                   朝から晩もで やってます　*从早到晚都在做这个*
+学校　がっこう　　　　　　　　　　　　　　好（す）きな人と同（おな）じ学校へ行（い）く　*和喜欢的人去同一所学校*
+試験　しけん　*考试*                                           試験は来月（らいげつ）だからね　*因为下个月就考试了呢*
+仕事　しごと　*工作*                                           お前は*你*お前の仕事をする　*你做好你的工作*
+==遅刻　ちこく　*迟到*                                            遅刻　遅刻　*迟到了，迟到了*==
+休み　やすみ　*休息*                                            夏休みは海がいいかな　*暑假去海边可好呢*
+==出張　しゅっちょう　*出差*                                  パパは外国（がいこく）に出張だし　*爸爸去国外出差了*==
+研修　けんしゅう　*进修*                                     こ…ここが　研修場所（けんしゅうばしょ）　*这就是进修的地方啊*
+旅行　りょこう　　*旅行*                                      修学旅行（しゅうがくりょこう）は人生に一度（いちど）きりだけどね
+展覧会　てんらんかい　*展览会*                           河原（かわら）で花の展覧会しよう　*在河边办个画展吧*
+==歓迎会　かんげいかい　*欢迎会*                           新人（しんじん）歓迎会だよ==
+パーティー　*联欢会*                                             今夜（こんや）はパーベキュー（*烧烤*）パーティーよ *今晚是烧烤宴会哦*
+==お宅　おたく　*府上，您家*                                  お宅はどちらですか　*您家住在什么地方*==
+いつ　*什么时候*　　　　　　　　　　　　　　いつから学校来るの　*什么时候开始来学校啊*
+v1.   休む　やすむ　*休息*
+　　休みます 　やすみます　                　　　 今日（きょう）の部活（ぶかつ） 休むわ　*今天的社团活动，我休息了*
+==v1.   働く　はたらく　*工作*==
+　　==働きます　はたらきます                             昔（むかし）からあの会社で働くのが夢だった　*以前梦想着在那家公司工作*==
+v1.   終わる　おわる　*结束*
+　　終わります　おわります　　　　　　　　すぐ終わる　*很快就完了*
+==v2.   起きる　おきる　*起床*==
+　　起きます　おきます　　　　　　　　　　
+v3    勉強する　べんきょうする　*学习*　　   　おまえ　*勉強する気（き）ないな*
+　　勉強します　べんきょうします
+いつも　*总是*                                                       いつも　いつも　いつでも　*总是 总是 无论何时*
+==神戸市　こうべ==
+#### 同步练习单词
+企画書　きかくしょ
+お寺　おてら　寺庙
+==葉子　ようこ　叶子==
+==手袋　てぶくろ　手套==
+交番　こうばん　派出所
+==向かい　むかい　对面==
+果物　くだもの　果物
+==台所　だいどころ　厨房==
+予定表　よていひょう　计划表
+映画　えいが　电影
+資料　しりょう
+==昼　ひる　白天==
+==残業　ざんぎょう　加班==
+食事　しょくじ　饭 食物
+==予約　よやく　预约==
+### 语法
+#### 1.动词
+ 　　　　　　　　　　　　　 masu型   否定
+表示习惯性、状态、未来      　ます　　ません
+过去   　　　　　　　　　　　ました　ませんでした
+3型 する->します　しました　しませんでした
+#### 2. 名[时间]に　动词
+私は昨日の八時に起きました
+昨日の八時、私は起きました
+![[Pasted image 20240531172517.png]]
+#### 3.　から…まで
+僕は夜の2時まで勉強しました
+![[Pasted image 20240531173740.png]]
+#### 4. いつ　动词ますか
+いつから　いつまで
+学校はいつ 始まりますか
+
+### 表达及词语讲解
+#### 1.人称
+称呼上司的时候一般直接称呼职位，或是名字+职位
+#### 2.です的用法
+已经明确的问题不需要重复时，可以简洁表达为~です
+#### 3.毎朝　何時に　起きますか
+两个名词都表示时间时，当前面的词有每时中间不加の，当前面的词没有每时 可加可不加
+毎日七時　√
+毎日の七時　× 
+#### 4.~ごろ
+表示大致的时间范围
+一時三十分ごろ　　二時頃か
+==ごろ后面不加に==
