--- a/考研/修士/日语/新标日/语法汇总/第三单元.md
+++ b/考研/修士/日语/新标日/语法汇总/第三单元.md
@@ -148,3 +148,111 @@
 面白いのが　あります
 の　ー　替代名词
  + 紅葉　こうよう、もみじ
+### 第十一课
+#### 1.名1は　名2が　一类形/二类形です
+*好きです、嫌いです、怖いです等表示情感的形容词可以以这种巨型使用，名
+1表示情感主题，名词2表示情感对象*
+小野さんは　歌が　好きです
+王さんは　肉が　嫌いです
+森さんは　犬が　怖いです
+王さんは　映画が　好きです
+#### 2.名1は　名2が　分かります・できます
+*分かります・できます・上手です・下手です・苦手です　等有关能力的词语也可以用这种句型*
+スミスさんはも　韓国語が　分かります
+私は　コンピューターが　できません
+小野さんは　料理が　上手です
+私は　ゲームが　苦手です
+#### 3.名や名
+*と和や一样 用于并列链接名词，但是や只列举许多项目中的两项，相当于“~呀~什么的”，
+并且や常常和など呼应使用，构成~や～など*
+吉田さんは　時々　中国や　韓国へ　行きます
+森さんは　サッカーや　野球が　好きです
+私は　お店で　野菜や　果物などを　買いました
+#### 4.～から・だから
+*表示原因*
+森さんは　お酒が　好きですから、毎日　飲みます
+寒いですから、窓を　閉めます。
+窓を　閉めます。　寒いですから
+暑いですから、窓を　開けました（あけました）
+*だから　比较礼貌的说法是ですから（所以）*
+キムさん　野菜が　嫌いです。だから、あまい　野菜を食べません
+明日は　休みです。ですから、子供と　動物園へ　行くます。
+試験は明後日始まります。ですから、私は今夜寝ません。
+明後日は試験がありますから、今晩、寝ません。
+*～から　1形容词 动词链接　暑いから　食べますから　
+~だから　ですから　　2类形容词  名词    好きだから　好きですから　学校だから*
+#### 5.表示频率的副词
+*いつも、よく、時々、たまに、あまり、全然　
+あまり和全然后面须接否定形式*
+私は　たまに　コンサートへ　行きます
+李さんは　時々　映画を　見ます
+田中さんは　あまり　横浜へは（对比）　行きません
+私は　あまに　アニメを　見ません。
+#### 6.どうしてですか
+*询问事由，相当于“为什么”*
+僕は　来月またここに来ますよ
+どうしてですか。
+ここで　友達の結婚式が　ありますから
+#### 表达及词语讲解
++ 僕　ぼく
+*男性自称*
++ ホテルで　写真展が　あります
+*正在发生的事件的场所用で（动态）。静态的事务存在的场所用に*
+展覧会、会議、結婚式
++ いかがですか
+*どうですか的礼貌用法，对长辈和陌生人使用*  
+コーヒーは　いかがですか
++ そうですね
+*嗯 はい。思考的时候可以用*
++ 迷います
+道に　迷いました
++　気に　入りました
+*表示喜欢，但是只用于第一次见到某物而感到中意，不能对长辈使用
+好きです　一般用于持续性的爱好*
++ 省略
+尽量不省略对方的话
+### 第十二课
+#### 1.名1は　名2より　一类形/二类形です
+*Aは　Ｂより　ooです　A比B更oo*
+李さんは　森さんより　若いです。
+中国は　日本より　広いです。
+上海は　北京より　にぎやかですか？
+*程度差异较大时用副词ずっと加以强调*
+王さんは　佐藤さんより　ずっと高いです
+#### 2.名1より　名2のほうが　一类形/二类形です
+*Aより、Ｂのほうが　00です　B比A更加00*
+日本より　中国ののほうが広いです。
+北京より　東京のほうが　暖かいです。
+大阪より　東京のほうが　にぎやかですか。
+佐藤さんより　王さんのほうが高いです。
+#### 3.名1は　名2ほど　一类形く　ないです・二类形では　ありません
+*AはＢほど　oo（否定）です*
+東京の冬は北京の冬ほど　寒くないです。
+神戸市は　大阪ほど賑やかでは　ありません。
+私の部屋は　王さんの部屋ほど綺麗ではありません。
+佐藤さんは　王さんほど高くないです。
+#### 4.名1の中で　名词2が　一番　一类形/二类形です
+*Aの中で、Ｂが一番ooです*
+スポーツの中でサッカーが一番面白いです。
+日本料理の中で寿司が一番美味しいです。
+*场所/事件不加 の中*
+日本で　一番高い山は富士山です。
+１年で一番寒い月は二月です。
+私達の村で　王さんが一番高いです。
+#### 5.名1と　名2と　どちらが　一类形/二类形ですか
+*询问两种事物中那种更xxxx*
+日本語と英語とどちらが難しですか？
+コーヒーと　紅茶と　どっちが　好きですか？　どちらも好きです。
+*どっち 是口语化的表达，三种以上的不能用どちら*
+#### 6.どの　名/いつ・どれ・だれ・なにが　一番　一类形/二类形ですか
+この中で　どの　料理が　一番美味しいですか？
+ーこの料理が一番美味しいです。
+季節の中で　いつが　一番好きですか？
+ー私は　春が一番好きです。
+*被选择的事物已见于上下文或是存在眼前时，使用どの、～が或だれが　反之则使用　何が*
+#### 表达词语讲解
++ 最近　*表式 過去ー今*
++ 何が　いいです　　*~ ~比较好，我喜欢~*
++ やっぱり  
++ 。。。が。。。
++ お酒
