个人简介、日语

--- a/修士/日语/新标日/新标日上/第二单元/第六课.md
+++ b/修士/日语/新标日/新标日上/第二单元/第六课.md
@@ -1,15 +1,15 @@
 ### 特殊日期（数字）
-１日　ついたち
-２日　ふつか
-３日　みっか
-４日　よっか
-５日　いつか
-６日　むいか
-７日　なのか
-８日　ようか
-９日　ここのか
-１０日　とおか
-二十日　はつか　
+==１日　ついたち==
+==２日　ふつか==
+==３日　みっか==
+==４日　よっか==
+==５日　いつか==
+==６日　むいか==
+==７日　なのか==
+==８日　ようか==
+==９日　ここのか==
+==１０日　とおか==
+==二十日　はつか==　
 ### 单词
 来月　らいげつ 1　　　　　　　来月とかでも　*下个月什么的*
 先月　せんげつ  1　　　　　　　先月の家賃（やちん）　*上个月的房租*
