--- a/修士/日语/新标日/知识点/动词分类.md
+++ b/修士/日语/新标日/知识点/动词分类.md
@@ -6,30 +6,15 @@
 1. 所有的动词都是由う段结尾
 #### 一类动词（五段动词）
 ![[Pasted image 20240530173255.png]]
-+ 1
 ![[Pasted image 20240530173530.png]]
-+ 2
 ![[Pasted image 20240530173742.png]]
-+ 3
 ![[Pasted image 20240530174037.png]]
 #### 二类动词（上一段动词，下一段动词）
 ![[Pasted image 20240530180522.png]]
 上下如何理解：い段-上一段，え段-下一段，都叫二类动词
 #### 三类动词
-不规则动词
+不规则动词 　　来る　くる　只有一个　ー来ます
 ![[Pasted image 20240530182859.png]]
 
 ### 总结
 ![[Pasted image 20240530184807.png]]
-### 动词变形
-+ 5段动词（一类）
-变成同行的い段+ます
-![[Pasted image 20240530190222.png]]
-+ 上一段动词、下一段动词 （二类）
-只需要把结尾的る变为ます
-![[Pasted image 20240530190438.png]]
-+ 三类动词（无规律）
-![[Pasted image 20240530190614.png]]
-### 从ます变回原型
-把い段变回う段
-![[Pasted image 20240530191531.png]]
