--- a/修士/日语/新标日/新标日上/动词汇总.md
+++ b/修士/日语/新标日/新标日上/动词汇总.md
@@ -1,3 +1,14 @@
+### 特殊动词归纳
++ 特殊一类：
+帰るー帰りますー帰ってー帰った
+切るー切りますー切ってー切った
+走るー走りますー走ってー走った
++ 特殊三类：
+来る　くる　ー　来ます　きます　ー　来て　きてー　来た　
++ 特殊变形
+来る　くる　ー　来て　きて
+行く　いく　ー　行って　ー　行った
+
 v1.   休む　やすむ　*休息*
 　　休みます 　やすみます　                　　　 今日（きょう）の部活（ぶかつ） 休むわ　*今天的社团活动，我休息了*
 ==v1.   働く　はたらく　*工作*==
@@ -65,3 +76,36 @@ v3　==借りる==　かりる３　*（向别人）借*
 　　借ります　　　　　　　　　　　　　　自電車借りるぞ　*借下自行车*
 v2　==教える==　おしえる０　*教*
 　　教えます　おしえます　　　　　　　　教えると自弁（じべん）も覚える（おぼえる）しね　*叫别人也等于自己复习了一遍呢*
+
+
+1类
+とおる　通るー通りますー通ってー通った　*通过，经过*
+いそぐ　急ぐー急ぎますー急いでー急いだ
+とぶ　　飛ぶー飛びますー飛んでー飛んだ    *飞行，飞*
+しぬ　　死ぬー死にますー死んでー死んだ
+まつ　　待つー待ちますー待ってー待った
+うる　　売るー売りますー売ってー売った
+はなす　話すー話しますー話してー話した
+わたる　渡るー渡りますー渡ってー渡った　*过（桥，河），穿过（马路）*
+おろす　下ろすー下ろしますー下ろしてー下ろした　*取，卸货*
+えらぶ　選ぶー選びますー選んでー選んだ
+けす　　消すー消しますー消してー消した　*关（灯），消除，去除*
+あるく　歩くー歩きますー歩いてー歩いた
+まがる　曲がるー曲がりますー曲がってー曲がった　*拐弯，曲折*
+あらう　洗うー洗いますー洗ってー洗った
+
+2类
+でる　　出るー出ますー出てー出た　*离开*
+でかける　出かけるー出かけますー出かけてー出かけた   *出门，外出*
+あける　開けるー開けますー開けてー開けた　*开，打开，开启*
+すぎる　過ぎるー過ぎますー過ぎてー過ぎた　*过*
+みせる　見せるー見せますー見せてー見せた　*出示，给~看*
+つける　つけるーつけますーつけてーつけた　*开（灯）*
+おりる　降りるー降りますー降りてー降りた　*下（车，山）*     （ふる　降る　*下（雨雪）*）
+
+3类
+かいものする　買い物するー買い物しますー買い物してー買い物した
+そつぎょうする　卒業するー卒業しますー卒業してー卒業した     *毕业*
+しょくじする　食事するー食事しますー食事してー食事した　　*吃饭，用餐*
+せいりする　整理するー整理しますー整理してー整理した
+コピーする　コピーするーコピーしますーコピーしてーコピーした
