--- a/修士/日语/新标日/新标日上/语法汇总/第四单元.md
+++ b/修士/日语/新标日/新标日上/语法汇总/第四单元.md
@@ -1,4 +1,4 @@
-### 第十四课
+### 第十三课
 #### 1.名【数量】+动词
 卵を　一個　食べます。　　　　　　　いっこ
 本を　二冊　買いました。　　　　　　にさつ
@@ -59,3 +59,52 @@
 お酒　飲みます
 +　とりあえず
 *总之*
+
+### 语法
+#### 动词变形
+て形和た形 见动词变形
+原形->辞书形
+#### 1.动て　动 【相继发生1】　
+*描述两个以上的动作依照时间顺序相继发生，可以有多个て连接 只是一般两项或三项*
+昨日デパートへ行って、買い物しました。
+昨日デパートへ行きました。そして、買い物しました。
+家へ　帰って、宿題をします。
+図書館へ行って本を借りて、家へ帰ります。
+昨日、映画館へ行って、映画を見ました。
+#### 2.动てから　动 【相继发生】
+*和语法1基本没区别，更加强调顺序，但是只能使用一次*
+李さんは　毎晩ラジオを　聞いてから寝ます。
+昼ご飯を食べてから　出かけます。
+家へ帰ってから、もう一度日本語の勉強をします。
+#### 3.动て　くだいさい
+*请求某人做某事*
+ここに　住所と名前を書いてくだいさい。
+この荷物を　航空便で　送ってください。　　送る　おくる
+教えてください。
+#### 4.名（场所）を　动词
+*表示经过一个地方，”通ります、渡ります、過ぎます”、此外，也可以与”出ます、卒業します”使用，表示离开的场所*
+*也可以表示离开的组织*
+このパスは駅前を通ります。
+この道をまっすぐ行って、橋を渡ってください。
+李さんは　毎朝　七時に　家を　出ます。
+私は来年大学を卒業します。
+#### 表达及词语讲解
++ 句子的连接方法
+*て形连接动词和动词，それから。*
+昨日、私は図書館へ行って、勉強しました。　*过去式只用词尾，て形没有过去式*
++ 買い物します （サ变）
+*名词+する、有一部分可以变，有一部分不可以变*
+ジョギングします。 　出張ます　しゅっちょう　　出張をします
++ 駅前　*车站的附近*
++ なかなか
+*表示比自己预想的程度要高，不能用于谈及上级或长辈*
++ ～て　くだいさいせんか
+*てください的敬语*
++ もう
+*已经，根据语境也有马上的意思*
++ すみませんが
++ そうしてください       こう・そう・ああ
+そうする
+*请您那样做*
++ お金を下ろします
+*取钱*
