--- a/修士/日语/新标日/知识点/语法小记.md
+++ b/修士/日语/新标日/知识点/语法小记.md
@@ -1,3 +1,10 @@
-+ が　和 は 在标记主语时的用法区别
-![[Pasted image 20240607190001.png]]
-熱かったです
+### が　和 は 在标记主语时的用法区别
++ が强调信息的新内容和描述性陈述
+ーとても気持ちがいいです：这里的心情是一个新的描述性信息
++ は标记句子的主题，强调已知信息或对比性陈述
+ーとても気持ちはいいです：这里可能带有对比或确认的意味（已知信息）
+### へ和に在场景后的区别
++ へ表示方向或目的地，强调动作的方向性
+学校へ行きます        强调去学校这个动作的方向
++ に表示目的地，强调达到某个具体地点
+学校にいきます　　强调学校这个地点
