--- a/修士/日语/新标日/新标日上/第四单元/十五课.md
+++ b/修士/日语/新标日/新标日上/第四单元/十五课.md
@@ -1,1 +1,100 @@
----24.6.16
+---24.6.17
+### 单词
+ボート　１
+ベンチ　１　*长椅，长凳*
+市役所　しやくしょ２
+携帯電話　けいたいでんわ５　*手机*  スマホ
+禁煙　きんえん０
+風邪　かぜ０　*感冒*  　　　　風　かぜ　*风*
+熱　ねつ２　*发烧，体温*
+睡眠　すいみん０
+お風呂　おふろ２
+薬局　やっきょく
+==クーラー==　１　*Ｃｏｏｌｅｒ空调*
+火　ひ０
+気　き　１　*精神，意识*
+打ち合わせ　うちあわせ　*事先商量，碰头*
+無理　むり１　*难以办到，勉强*
+駐車禁止　ちゅうしゃきんし０
+立入禁止　たちいりきんし０
+==火気厳禁==　かき　げんきん　１－３　*严禁烟火（当做两个单词来读）*
+==撮影禁止==　さつえいきんし０
+##### 动词
+一类
+のる　　乗るー乗りますー乗ってー乗った
+つかう　使うー使いますー使ってー使った
+すわる　座るー座りますー座ってー座った
+はいる　入るー入りますー入ってー入った
+もうす　申すー申しますー申してー申した
+とる　　とるーとりますーとってーとった
+うたう　歌うー歌いますー歌ってー歌った
+二类
+==つたえる==　伝えるー伝えますー伝えってー伝えった
+とめる　止めるー止めますー止めってー止めった
+##### ；
+温かい　あたたかい　4 *热乎，温暖*
+大丈夫　だいじょうぶ３　
+だめ　２
+十分　じゅうぶん３
+もちろん　２
+ゆっくり　３
+もしもし　１
+いえ　１
+==お大事に==　おだいじに　０　*请多保重*
+いけません　４　*不可以*
+かまいません　５ *没关系，不要紧*
+まだです　１　*还没有*
+==気をつけます==　きをつけます　５　*注意*
+無理をします　むりをします　１　*勉强*
+睡眠を取ります　すいみんをとります８　*睡觉*
+お風呂に入ります　おふろに　はいります　２－８　*洗澡*
+### 语法
+#### 1.动て　います
+*表示正在进行时，て形+います*
+小野さんは　今新聞を読んでいます。
+森さんは今仕仕事をしています。
+太郎さんはコーヒーを飲んでいます。
+王さんは日本語を勉強しています。
+#### 2.动ても　いいです（か）
+*表示许可，一般不用于尊长*
+家で仕事をしてもいいです。
+ここで写真を撮ってもいいですか。ーーいいですよ。
+家に帰ってもいいですか。ーーはい、かえってもいいです。
+ここに食べてもいいですか。
+#### 3.动ては　いけません
+*表示禁止*　
+*ないで　ください  （未来形变形）*
+飛行機の中でタバコを吸ってはいけません。
+教室でものを食べてはいけません。
+この部屋に入ってはいけませんか。ーーはい、入ってはいけません。ーーいいえ、入ってもいいです。
+裸足で（*方式*）入ってはいけません。
+#### 4.名【附着点】に　动词
+*附着点：骑、座。。。的时候*
+小野さんは公園でボートに乗りました。
+李さんは電車に乗りました。
+この椅子に座ってくだいさい。
+李さんはかばんに書類を入れました。
+自電車に乗ります。
+#### 5.名【目的地】に　动
+*に侧重于目的地，へ侧重于移动，只有表示移动动词的目的地时へ可以替换に*
+李さんは病院に行きます。
+李さんは家に帰りました。
+#### 表达及词语讲解
++ 肯定的场合 否定的场合
+*ええ、どうぞ。
+ええ、いいですよ*
+否定
+*いえ、それはちょっと　礼貌的说法
+いいえ、いけません  偏规则，法律，社会惯例*
++ ボートに乗ります *划船*
++ もちろんです
++ 無理をしてはいけません
++ ゆっくり　　*缓慢、好好地*
++ 薬を出します
++ お大事に
++ もしもし
+宿題
+小野さんは食事しています
+病院でタバコを吸ってはいけません。*に表示方向或地点，但在表示具体地点时通常用で*
+ここに座っていいですか。　*这一句で和に都可以*
+お疲れ様でした
