--- a/修士/日语/新标日/新标日上/语法汇总/第四单元.md
+++ b/修士/日语/新标日/新标日上/语法汇总/第四单元.md
@@ -60,7 +60,7 @@
 +　とりあえず
 *总之*
 
-### 语法
+### 第十四课
 #### 动词变形
 て形和た形 见动词变形
 原形->辞书形
@@ -108,3 +108,100 @@
 *请您那样做*
 + お金を下ろします
 *取钱*
+
+### 第十五课
+#### 1.动て　います
+*表示正在进行时，て形+います*
+小野さんは　今新聞を読んでいます。
+森さんは今仕仕事をしています。
+太郎さんはコーヒーを飲んでいます。
+王さんは日本語を勉強しています。
+#### 2.动ても　いいです（か）
+*表示许可，一般不用于尊长*
+家で仕事をしてもいいです。
+ここで写真を撮ってもいいですか。ーーいいですよ。
+家に帰ってもいいですか。ーーはい、かえってもいいです。
+ここに食べてもいいですか。
+#### 3.动ては　いけません
+*表示禁止*　
+*ないで　ください  （未来形变形）*
+飛行機の中でタバコを吸ってはいけません。
+教室でものを食べてはいけません。
+この部屋に入ってはいけませんか。ーーはい、入ってはいけません。ーーいいえ、入ってもいいです。
+裸足で（*方式*）入ってはいけません。
+#### 4.名【附着点】に　动词
+*附着点：骑、座。。。的时候*
+小野さんは公園でボートに乗りました。
+李さんは電車に乗りました。
+この椅子に座ってくだいさい。
+李さんはかばんに書類を入れました。
+自電車に乗ります。
+#### 5.名【目的地】に　动
+*に侧重于目的地，へ侧重于移动，只有表示移动动词的目的地时へ可以替换に*
+李さんは病院に行きます。
+李さんは家に帰りました。
+#### 表达及词语讲解
++ 肯定的场合 否定的场合
+*ええ、どうぞ。
+ええ、いいですよ*
+否定
+*いえ、それはちょっと　礼貌的说法
+いいえ、いけません  偏规则，法律，社会惯例*
++ ボートに乗ります *划船*
++ もちろんです
++ 無理をしてはいけません
++ ゆっくり　　*缓慢、好好地*
++ 薬を出します
++ お大事に
++ もしもし
+### 第十六课
+#### 1.一类形容词て 一类形容词（并列）
+*一类形容词 いー＞くて*
+明るいー明るくて　　新しいー新しくて
+ホテルの部屋は広くて明るいです。
+この本は安くて面白いです。
+このリンゴは大きくて、甘くて、美味しいですか。
+このケーキは大きくて、甘いです。
+#### 2.二类形容词で　二类形容词（并列）
+*＋で*
+簡単ー簡単で　親切ー親切で
+このコンピュータの操作は簡単で便利です
+森さんは親切で優しいです。
+この公園は静かで広いです。
+ここに便利で賑やかです。にぎやか
+#### 3.名词1 で　名词2 （并列）
+スミスさんは旅行会社の社員で、営業部の部長です。
+この機械は日中電気の製品で、中国製です。
+李さんは中国人で、北京大学の学生です。
+#### 4.动て　います（结果状态）
+*除了表现现在进行时，还能表示动作结束后留下的结果状态*
+森さんは車を持っています。
+私は北京に住んでいます。
+田中さんは知っていますか。
+車を持っていますか。ーーいいえ、持っていません。
+たなかさを知っていますか。ーーいいえ、知りません。
+#### 5.小句が，小句
+*转折关系，相当于但是，可是*
+３ヶ月パソコンを勉強しましたが、まだあまりできません。
+このレストランは美味しいですが、ちょっと高いです。
+佐藤さんは綺麗ですが、性格は悪いです　（せいかく）
+#### 6.まだ　动词（否定）
+*表示还没到达所询问的内容的程度，相当于“还没有”*
+何年ぐらい日本語を勉強しましたか。
+２年勉強しました。でも、まだあまりできません。
+小野さんはもう結婚していますか。　いいえ、まだ結婚していません。
+私はご飯をまだ食べていません。
+#### 表达及词语讲解
++　背が高くて　足が長くて
+*長い・太い・短い・細い*
++　入場料
+～費・～料・～代
++ おまんご
++ Idカードはありますか
+*あります 表示存在也可以表示所有*
++ ちゃんと
+*偏口语*
++ ほら　
++ ずいぶん *超过预想*
++ 派手   *气派、花里胡哨的*
++ 嫌いじゃありません     *并不讨厌，偏正面、肯定的评价*
