--- a/修士/日语/新标日/新标日上/第五单元/十七课.md
+++ b/修士/日语/新标日/新标日上/第五单元/十七课.md
@@ -32,3 +32,64 @@ v3　れんらくする　連絡するー連絡しますー連絡してー連絡
 香港　ホンコン　１
 スイス　1 *瑞士*
 ～中に　～じゅうに
+### 语法
+#### 1.名が　欲しいです
+*名１は名２が欲しいです*
+私は新しい洋服が欲しいです。
+何が欲しいですか（*不可以对长辈使用*）。ーー新しいパソコンが欲しいです。
+私は新しいパソコンが欲しいです。
+#### 2.名を　动たいです
+*动词ます形的活用语法，去掉ます　ー　变为たい
+否定形式：たいーたくない　或者是-たくありません*
+映画を見たいです。
+今日はお酒を飲みたくないです。
+何をしたいですか　ーー何もしたくありません。
+私は公園へ行きたいです。　行くー行きますー行きたいーいきたくない
+たい　ー　私　（一般主语都是わたし）
+たがる　ー　其他人想
+*何をしたいですか　ー　第三人称不可以用。たい 表示“我想做某事，或者你想做什么”*
+*たい的对象を和が可以替换，但是　欲しい　无论是什么前面的助词一定是が*
+誰==に==会いたいですか？　ーー誰==にも==あいたくないです。
+会うー会いますー会いたいー会いたくないい
+名+==に・から・と==+动词？　ー＞　==にも・からも・とも==　+ 动词否定（全盘否定）
+名词+へ＋动词 ？ ー＞　へも、も＋动词否定
+どこへ行きたいですか？　ーーどこへも行きたくないです・どこも行きたくないです。
+#### 3.动ませんか
+*~ませんか、表示一种提议*
+一緒にお茶を飲みませんか。
+少し休みませんか。
+明日故宮へ行きませんか。
+家で休みませんか。　*存在的场所用に，动词进行的场所用で*
+#### 4.动ましょう
+*也表示提议，偏口语，但是没有ませんか有礼貌*
+ちょっと休みましょ。
+そろそろ行きましょ。
+一緒にお茶を飲みましょう。
+一緒にテレビを見ましょ。
+#### 5.疑问词でも
+*表示任何情况下时态都相同时，使用 疑问词+でも*
+何、いつ、だれ
+李さん、何を食べたいですか。　ーー何でもいいです。
+いつでも電話をしてください。
+誰でも分かります。
+この問題は誰でもできます。
+#### 6.ね（缓和语气）
+#### 表达及词语讲解
++ 欲しいです、飲みたいか
+*不礼貌，不可以对长辈使用，应该用　どうですか。*
++　今年中に
+今日、明日、今年、＋中　じゅう
+～週、月　ちゅう
+来週中にもう一度連絡しましょ
++　ぜひ　　　＋たい　＋ください
+お汁粉？ぜひ食べたいです。
+今度ぜひ家へ遊びに来てくだいさい。
++　お汁粉　おしるこ
++　初詣　はつもうで
+1月1日到神社祈祷
+
+宿題
+私は母の料理を食べたいです。
+どこに行きたいですか？ーーどこでもいいです。
+土曜日の午後にコンサートを聞きに行きましょうか？いいです、行きます。
+*を　ー　聞く。　　如果不用 聞きに行きましょう　直接用　行く　用へ　ー　行きます*
