--- a/Game Note/记录.md
+++ b/Game Note/记录.md
@@ -2,20 +2,26 @@
 + wolong 20.8小时一周目
 + 女神异闻录5黄金版 75.9小时，第三学期没打完
 + 神之天平 37.6小时 通关
-+ 鬼泣5 2.8小时
-+ 艾尔登法环 88.3小时 女武神
-+ 荒野大镖客 27.9小时
-+ MH RISE 94.6小时
-+ 中土世界 战争之影 7.7小时
-+ 天穗之咲稻姬 4.7小时
-+ 主播女孩重度依赖 101分钟
-+ NieR Replicant 13小时
++ 鬼泣5 2.8小时 弃坑
++ 荒野大镖客 27.9小时 弃坑
++ MH RISE 94.6小时 毕业
++ 中土世界 战争之影 7.7小时 弃坑
++ 天穗之咲稻姬 4.7小时 弃坑
++ 主播女孩重度依赖 101分钟 通关
++ NieR Replicant 13小时 弃坑
 + 黑魂1 26.5小时 通关
 + 英灵神殿 27.8小时
-+ 黑魂三 通关,环印城盖尔+黑龙没打
++ 黑魂三 通关
 + 尼尔机械纪元 两次E结局通关
 + 八方旅人2 52小时，26/33，通关
 + 血源 老猎人 40小时 白金
 + 魔法使之夜 20小时 白金
 + FF16 44小时
 + 博德之门 195.9 小时
++ FF7重生 80小时通关
++ 碧蓝幻想Relink 79小时 毕业
++ APEX 1036.8小时+600小时
++ 艾尔登法环 141.5小时
++ 逆转裁判 17.5小时 弃坑
++ 黄金树之影 30小时通关
++
