--- a/个人简历/个人简历.md
+++ b/个人简历/个人简历.md
@@ -67,8 +67,8 @@
 	+ 少年漫，剧情向爱好
 	+ Fate系列老粉
 + 游戏
-	+ 网游：炉石传说常年传说，APEX多赛季钻石，LOL最高段位钻石
-	+ 单机：JRPG，ARPG爱好者；魂系，最终幻想，八方旅人，P系列粉丝
+	+ 网游：炉石传说多赛季传说，APEX多赛季钻石，LOL最高段位钻石
+	+ 单机：JRPG，ARPG爱好者；魂系，最终幻想，八方旅人，P系列
 + 漫画
 	+ 剑风传奇、海盗战记、咒术回战
 + 其他技能
