--- a/修士/情报修士/科目总结.md
+++ b/修士/情报修士/科目总结.md
@@ -1,3 +1,10 @@
+### 着重准备科目
+```
+1.算法和数据结构
+2.计算机体系结构（计组+操作系统）
+
+（数电、信息论）
+```
 #### 京大：
 ```shell
 + 知能：
@@ -26,3 +33,27 @@
 	二极管/晶体管、MOSFET、模拟电子电路、运算放大器、存储元件、数字表达式、逻辑代数和逻辑函数、组合逻辑电路、时序电路、算术运算电路等。
   5 数学分析与信号处理 微分方程、傅里叶级数、拉普拉斯变换、复变函数、信号运算、连续时间信号的傅里叶分析、采样、离散时间信号的傅里叶分析、Z变换、滤波器等。
 ```
+#### 神户：
+```
+回答以下所有 4 个方面
+（括号内的数字表示问题范围）
+1.控制工程（稳态特性、稳定性、传递关系）
+数、波特图、时间响应、线性度、
+拉普拉斯变换等）
+2.数学规划（线性规划、对偶性、图形）
+博弈论、层次分析法
+（AHP）、库存管理、动态规划等
+程度）
+3.计算机系统（数据表示，
+逻辑运算、组合电路、时序电路
+道路、计算机体系结构、操作
+系统等）
+4.算法数据结构（计算量、
+数据结构、哈希、堆、搜索
+树、对齐、C语言等）
+```
+
+![[Pasted image 20240628221529.png]]
+![[Pasted image 20240628221540.png]]
+![[Pasted image 20240628221550.png]]
+![[Pasted image 20240628221600.png]]
