--- a/修士/经验贴.md
+++ b/修士/经验贴.md
@@ -2,3 +2,4 @@
 https://zhuanlan.zhihu.com/p/659239629
 211 绩点3.3 托业835 日语无证
 ![[Pasted image 20240609111656.png]]
+[大阪大学情报科学/名大情报系统/京大通情合格经验 - 知乎](https://zhuanlan.zhihu.com/p/656693626?utm_medium=social&utm_oi=1295436121225449472&utm_psn=1686784470202556416&utm_source=qq)
