--- a/日语/新标日/新标日上/动词汇总.md
+++ b/日语/新标日/新标日上/动词汇总.md
@@ -109,3 +109,83 @@ v2　==教える==　おしえる０　*教*
 しょくじする　食事するー食事しますー食事してー食事した　　*吃饭，用餐*
 せいりする　整理するー整理しますー整理してー整理した
 コピーする　コピーするーコピーしますーコピーしてーコピーした
+
+一类
+のる　　乗るー乗りますー乗ってー乗った
+つかう　使うー使いますー使ってー使った
+すわる　座るー座りますー座ってー座った
+はいる　入るー入りますー入ってー入った
+もうす　申すー申しますー申してー申した
+とる　　とるーとりますーとってーとった
+うたう　歌うー歌いますー歌ってー歌った
+二类
+==つたえる==　伝えるー伝えますー伝えってー伝えった
+とめる　止めるー止めますー止めってー止めった
+
+一类
+まつ　　待つー待ちますー待ってー待った
+すむ　　住むー住みますー住んでー住んだ
+しる　　知るー知りますー知ってー知った
+==なおす==　直すー直しますー直してー直した
+二类
+かたづける　片づけるー片づけますー片づけてー片づけた
+三类
+れんしゅうする　練習するー練習しますー練習してー練習した
+けっこんする　結婚するー結婚しますー結婚してー結婚した
+あんしんする　安心するー安心しますー安心してー安心した
+
+v2　はじめる　始めるー始めますー初めてー始めた
+v3　れんらくする　連絡するー連絡しますー連絡してー連絡した
+
+ｖ１　なるーなりますーなってーなった    *成为，变成*
+ｖ１　あくーあきますーあいてーあいた　*开*
+ｖ１　にあう　似合うー似合いますー似合ってー似合った　*合适，适合*’
+
+一类
+さわる　触るー触りますー触ってー触ったー触らない
+ぬぐ　　脱ぐー脱ぎますー脱いでー脱いだー脱がない
+==ころぶ==　転ぶー転びますー転んでー転んだー転ばない　*摔倒*
+==かわく==　渇くー渇きますー渇いてー渇いたー渇かない
+なおる　治るー治りますー治ってー治ったー治らない　*痊愈*
+==すべる==　滑るー滑りますー滑ってー滑ったー滑らない　*滑行*
+かえす　返すー返しますー返してー返したー返さない　*归还*
+てつだう　手伝うー手伝いますー手伝ってー手伝ったー手伝わない
+==はこぶ==　運ぶー運びますー運んでー運んだー運ばない　*搬运*
+なくす　なくすーなくしますーなくしてーなくしたーなくさない　*丢失*
+おとす　落とすー落としますー落としてー落としたー落とさない　*掉，使落下*
+おく　　置くー置きますー置いてー置いたー置かない　*放置*
+==はらう==　払うー払いますー払ってー払ったー払わない　*付钱，支付*
+たつ　　立つー立ちますー立ってー立ったー立たない　*站，立*
+二类
+わすれる　忘れるー忘れますー忘れてー忘れたー忘れない
+==あわてる==　慌てるー慌てますー慌ててー慌てたー慌てない
+すてる　　捨てるー捨てますー捨ててー捨てたー捨てない
+三类
+ざんぎょうする　残業するー残業しますー残業してー残業したー残業しない
+しんぱいする　　心配するー心配しますー心配してー心配したー心配しない
+
+一类
+ひく　　弾くー弾きますー弾いてー弾いたー弾かない
+すく　　空くー空きますー空いてー空いたー空かない　　*饿*
+==のぼる==　登るー登りますー登ってー登ったー登らない
+二类
+==あつめる==　集めるー集めますー集めてー集めたー集めない
+==あびる==　　浴びるー浴びますー浴びてー浴びたー浴びない    *淋，浇*
+三类
+ごちそうする　御馳走するー御馳走しますー御馳走してー御馳走したー御馳走しない
+==きこくする==　　帰国するー帰国しますー帰国してー帰国したー帰国しない
+
+一类
+わたす　　　渡すー渡しますー渡してー渡したー渡さない　　*交给*
+二类
+おくれる　　遅れるー遅れますー遅れてー遅れたー遅れない  
+かんがえる　考えるー考えますー考えてー考えたー考えない
+しらべる　　調べるー調べますー調べてー調べたー調べない   *调查*
+きる　　　　着るー着ますー着てー着たー着ない  *穿*
+三类
+よやくする　　予約するー予約しますー予約してー予約したー予約しない
+かんしゃする　感謝するー感謝しますー感謝してー感謝したー感謝しない
+うんどうする　運動するー運動しますー運動してー運動したー運動しない
+せんたくする　洗濯するー洗濯しますー洗濯してー洗濯したー洗濯しない
+ほうこくする　報告するー報告しますー報告してー報告したー報告しない
+
