--- a/日语/新标日/新标日下/第七单元/二十八课.md
+++ b/日语/新标日/新标日下/第七单元/二十八课.md
@@ -33,7 +33,7 @@
 小野さん、この本を私にくれますか？
 昨日、馬さんが妹に旅行のお土産をくれました。
 *日语中一般采用以说话人做主语进行叙述的说法。 わたしに本をくれました  更多用  私は林さんに本をもらいました*
-#### 2.动て　あげます
+#### 2.动て　あげます　かす
 *说话人或者说话人一方的人为别人做某事的用法*
 我或者我的朋友 为别人做某事
 森さんはお年寄りの荷物を持ってあげました。　　森先生帮老年人拿了行礼
@@ -52,6 +52,9 @@
 ```
 てくれました 强调动作的执行者，而てもらいました强调动作的接受者
 动てくれました 前面主语都用が。 てもらいました　前面主语都用に可以这么理解
+
+くれました主语是别人-是给予者
+もらいました主语是自己-是被给予者
 ```
 #### 表达及词语讲解
 + ~てあげます　　不太礼貌
