--- a/日语/新标日/新标日下/第八单元/三十二课.md
+++ b/日语/新标日/新标日下/第八单元/三十二课.md
@@ -33,3 +33,48 @@
 入院するー入院しますー入院してー入院したー入院しないー入院しろー入院しよう
 お邪魔するーお邪魔しますーお邪魔してーお邪魔したーお邪魔しないーお邪魔しろーお邪魔しよう
 担当するー担当しますー担当してー担当したー担当しないー担当しろー担当しよう
+### 语法
+#### 1.动词（基本型/ない形）つもりです
+*表示说话之前已经形成的意志、打算*
+*和　动词意志行+と思っています意思相同*
+今度の日曜日に遊園地へ行くつもりです。
+ボーナスで車を買うつもりです。　買おうと思っています
+もうタバコは吸わないつもりです。
+来月、日本へ飛行機で行くつもりです。
+*对长辈、上级用 つもりですか 不太礼貌*
+#### 2.动词（基本型/ない形）ことにします・ことにしました
+*表示自己决定实施某种行为时使用、（します）说话的时候，刚刚决定    （しました） 已经决定好了*
+明日から毎日運動することにします。
+今日からお避けを飲まないことにします。
+明日、友達と映画を見に行くことにしました。
+東京へは飛行機で行くことにしました。
+今年の夏は旅行にいかないことにしました。
+私は明日動物園へ行くことにしました。
+*这里的こと和の是不能替换的*
+#### 3.动词（基本型/ない形）ことになりました
+*表示由于某种外在的原因导致形成了某种决定*
+来月から給料上がることになりました。
+月曜日から３日間、香港へ出張することになりました。
+*这里的こと和の是不能替换的*
+*也可以用于婉转的表达根据自己的意志决定的事情*
+私達、結婚することになりました。
+#### 4.小句（简体形）そうです（传闻）
+*用”～そうです” 表示传闻*
+ばさんの息子さんは、今年小学校に入学するそうです。
+天気予報によると、明日は雨だそうです。
+うわさによると、あの店のラーメンは美味しくないそうです。
+*そうです 没有否定、过去、疑问的形式*
+#### 表示单位的词
+メートル　ｍ　　　キロメートル　ｋｍ
+グラム　ｇ　　　　キログラム　　ｋｇ
+#### 词语讲解
++ 今度　　　　*除了会表示这次，还会表示下次*
++ ボーナス　　*奖金*
++ ずっと　　　*表示某一种期限内动作、状态意志持续的用法*  連休中はずっと晴れだそうですよ。
++ メールがあって　　*电话、信、fax 都可以用~がある*
++ お邪魔する　*お邪魔する　打扰您了、おじゃましました*
++ ～てほしい　　*~たい表示自己想要做某事的愿望、～てほしい表示希望别人去做某事*  ちょっと手伝えって欲しいんですが
++ って　　　　～と、～という人は的缩略形式  *跟在ん后面时会出现 促音脱落现象*
+宿題
+今度のボーナスでパソコンを買うことにしました。
+新聞によると、佐藤さんと結婚しました。
