--- a/日语/新标日/知识点/动词变形.md
+++ b/日语/新标日/知识点/动词变形.md
@@ -62,3 +62,33 @@
 調べる　ー　調べます　ー　調べて　ー　調べた
 走る　ー　走ります　ー　走って　ー　走った
 勉強する　ー　勉強します　ー　勉強して　ー　勉強した
+### 动词的命令形
+```
+一类动词：基本型的最后一个音变为 え段音   うー＞え
+二类动词：把基本型的る变为ろ
+三类动词：把来る变为 来い（こい）、把　する　变为 しろ
+```
+### 动词的意志形
+*动词的意志行是说话人当场表示自己的决心、意志的表达形式*
+一类形：基本形的最后一个音变为 お段的长音　　うーおう
+二类动词：る　ー　よう
+三类动词：来るー来よう（こよう）　　するーしよう
+### 自动词、他动词
+*自动词-が　 他动词-を*
+自动词：现象、状态         是谁做的？（和我没关系）
+他动词：动作、行为         强调是谁做的
+窓が閉まりました　（自動）
+ドアが閉まりました　（自動）
+ドアを閉めました　　（他动）
+誰がこの玩具を壊しましたか？　　*谁弄坏了这个玩具*
+飛先生は泥沼（どろぬま）に転びこんで、服が汚れました。
+*名词 が　自动词
+名词 を　自动词   1.经过的场所 2.离开的地点 3.特殊*
++ 3.特殊   バレーを踊る。　　
+	+ 踊る：古日语中是具有移动词性的，现代是 跳舞的意思
+	+ 同族目的语 可以使用を　  踊りを踊るー＞　同一个词衍生而来
+#### 如何区分？
+他动词 　す　＞　え段+る　＞　他に
+*以す结尾，基本就是他动，以え段+る结尾基本就是他动*
+他动： 壊す　    消す　　　　掛ける　　　止める
+自动： 壊れる　消える　　　掛かる
