--- a/日语/新标日/新标日下/第九单元/三十三课.md
+++ b/日语/新标日/新标日下/第九单元/三十三课.md
@@ -42,3 +42,59 @@
 たてる　建てるー建てますー建ててー建てたー建てないー建てろー建てよう
 まける　負けるー負けますー負けてー負けたー負けないー負けろー負けよう
 よごれる　汚れるー汚れますー汚れてー汚れたー汚れないー汚れろー汚れよう
+### 语法
+#### 1.自动词与他动词
+他动词 　す　＞　え段+る　＞　他に
+*以す结尾，基本就是他动，以え段+る结尾基本就是他动*
+#### 2.【自动】ています 【结果状态】
+*自动词是表示变化的，ています表示结果的存续、表示一种状态*
+部屋の電気を消えています。　　*灭着，还没有亮*
+壁には大きな絵が掛かっています。
+この自動車は壊れています。
+*有自动 也有他动的词才有这个用法
+自动词的た形偏重表达变化的完成，*
+部屋の電気が消えています。
+部屋の電気が消えました。
+*瞬间动词-> 存续
+持续动词-> 正在*
+森さんは車を持っています。
+吉田さんは眼鏡をかけています。
+#### 3.【动】てしまいます
+*表示该动作所产生的结果是令人不愉快的事情*
+森さんはボーナスを全部使ってしまいました。
+大切な書類をうっかり忘れてしまいました。
+無理をすると、病気になってしまいました。
+*但也可以只用来表示动作的“完成”*
+旦那がポテトチップスを全部食べてしまいました。
+#### 4.【动】/【形】そうです　　【样态】【推测】
+*用于描述说话人对某事物的观感或推测事态的发展*
+*动词 ます活用
+一类形去い*
+このケーキはとても美味しそうです。
+李さんは仕事が大変そうです。
+雨が降りそうです。
+あの人は将来偉くなりそうでう。
+*传闻 ： 简体+そうです
+推测：连体+そうです*
+美味し==い==そうです。　美味しそうです。
+雨が降るそうです。　雨が降りそうです。
+*否定： そうではありません　　　如果是动词：そうにありません*
+あまり美味しそうではありません。
+雨はやみそうにありません。
+*另外，ない 会变成なさそうです　　いい变为よさそうです*
+今日は会議がなさそうです。
+この本はとてもよさそうです。
+*そうです 不仅用语句为，还可以用来修饰名词、名词前是そうな・动词前是そうに*
+美味しそうなケーキですね。
+子供たちは楽しそうに遊んでいます。
+#### 表达词
++ 自动和他动的用法 　他动：す　＞　え＋る　＞　他に
++ かしら和かな语义相近，内心疑问时自言自语，女性语气
++ それにしても　　それにしても、大勢並んでいるわね。
++ お久しぶりです
++ 相変わらずですね。　*表示情况没有变化、 你还是那个样子啊*
++ お元気そうで、何よりです。　*你看起来挺精神的，比什么都强*
+宿題
+静かさんの部屋の電気は消えています。
+このクッキは美味しそうです。
+このケーキは美味しいそうです。
