--- a/日语/新标日/新标日下/第九单元/三十四课.md
+++ b/日语/新标日/新标日下/第九单元/三十四课.md
@@ -36,3 +36,72 @@
 いただきます
 遠慮なく　えんりょなく　*不客气*
 + 动词
+一类
+やく　　焼くー焼きますー焼いてー焼いたー焼かないー焼けー焼こう
+かせぐ　稼ぐー稼ぎますー稼いでー稼いだー稼がないー稼げー稼ごう
+のこる　残るー残りますー残ってー残ったー残らないー残れー残ろう
+つつむ　包むー包みますー包んでー包んだー包まないー包めー包もう
+たのむ　頼むー頼みますー頼んでー頼んだー頼まないー頼めー頼もう
+はる　　貼るー貼りますー貼ってー貼ったー貼らないー貼れー貼ろう
+かざる　飾るー飾りますー飾ってー飾ったー飾らないー飾れー飾ろう
+しまう　しまうーしまいますーしまってーしまったーしまわないーしまえーしまおう
+あう　　合うー合いますー合ってー合ったー合わないー合れー合おう
+もどす　戻すー戻しますー戻してー戻したー戻さないー戻せー戻そう
+二类
+ためる　　貯めるー貯めますー貯めてー貯めたー貯めないー貯めろー貯めよう
+ならべる　並べるー並べますー並べてー並べたー並べないー並べろー並べよう
+あずける　預けるー預けますー預けてー預けたー預けないー預けろー預けよう
+つづける　続けるー続けますー続けてー続けたー続けないー続けろー続けよう
+やせる　　痩せるー痩せますー痩せてー痩せたー痩せないー痩せろー痩せよう
+三类
+ほうもん　訪問するー訪問しますー訪問してー訪問したー訪問しないー訪問しろー訪問しよう
+ちょきん　貯金するー貯金しますー貯金してー貯金したー貯金しないー貯金しろー貯金しよう
+かんげい　歓迎するー歓迎しますー歓迎してー歓迎したー歓迎しないー歓迎しろー歓迎しよう
+ようい　　用意するー用意しますー用意してー用意したー用意しないー用意しろー用意しよう
+### 语法
+て形
+ｖ１　て　ｖ２　先后顺序
+ています　正在进行
+【自动词】ています  表示状态的存续
+补助动词 ～てあります　～ておきます　～てみます
+后面动词对前面动词进行补充
+#### 1.【他动】てあります
+*表示有意进行的动作结果的存续状态　　不讲主题 只涉及对象
+看上去是现象、实际上是按时（有人做的）*
+壁にカレンダーがかけてあります。
+窓が開けてあります。
+パスポートはバッグの中に入れてあります。
+冷蔵庫の中にコーラがいる。
+冷蔵庫の中にコーラが入れてあります。
+壁にカレンダーが掛かっています。　　自动词+ている　 表示一个现象
+壁にカレンダーがかけてあります。       他动词+てあります　也表示一个现象，但是强调（暗示）是有人做的
+#### 2.【动词】ておきます　「おく」
+*表示为做某事准备而有意识地进行的动作，效果留存下来的状态　　预先做某事、事先做某事*
+お客さんが来る前に、部屋を掃除しておきます。　　　还没有打扫。  しておきました。（已经打扫了）
+明日は忙しいです。今夜はゆっくり休んでおいてください。
+訪問する前に、一度電話しておきます。
+帰りの切符を買っておきますか？　いいえ、買って　==おかなく==　てもいいです。　　おくー＞おかない
+荷物を整理しておきました。　我已经把行李整理好了
+#### 3.【动词】てみます　「みる」
+*て＋みます表示尝试做某事*
+太田さんは中国語で手紙を書いてみました。
+美味しそうですね。食べてみます。
+それわ可笑しい。もう一度調べてみてください。
+李さんはスマホで書類を送ってみます。　　ファイル　ファイル＝しょるい
+#### 4.【小句1 基本型】ために　【小句2】 目的；【名词】+のために、「小句」
+*～ために* 表示目的，前后小句主语相同
+日本に留学するために、お金をためています。
+運動をするために、新しい靴を買いました。
+森さんは駅へ行くために、バスに乗りました。
+身体の健康のために、毎日野菜を食べまています。
+#### 表达词语讲解
++ とっておき　　*珍藏的、特别....的*
++ うわあ
++ しっかり　　　*有很多意思，可以表示充足、充分；扎实、认真*
++ ハードスケジュール　*hard schedule*
++ あちこち　　　あちらこちらー＞あちこち　*表示多种场合或多种方向*
++ もったない　　*表示遗憾*
+宿題
+A会社へ行く前に、王部長に電話をしておきます。
+私の料理を食べてみてください。
+運動のために、毎日ジョギングをします。
