--- a/日语/新标日/新标日下/第九单元/三十六课.md
+++ b/日语/新标日/新标日下/第九单元/三十六课.md
@@ -58,3 +58,63 @@
 くろう　　　苦労する
 びっくり　　びっくりする
 しゅっせき　出席する
+### 语法
+#### 1.小句1 て　小句2  （表示原因、理由）
+*～て有表示相继发生、并列、补助动词。 还可以表示原有利用
+这个表达比较口语，小句2不可以是祈使句（请求、命令类的）*
+==ので　客观，から　主观==
+遅くなって、すみません。
+最初は言葉が通じなくて、とても困りました。
+森さんは頭が痛くて、会社を休みました。
+説明が上手で、よく分かりました。
+父は大阪の出身で、いつも関西弁で話します。
+彼はアメリカ人で、いつも英語で話します。
+#### 2.名词に  （用途，基准）
+*~に 也可以用来表示用途和基准（标准、用作比较的参照物）
+后面一般是用　つかいます*
+この写真は何に使いますか？　パスポートの申請に使います
+スーパーが近いので、このマンションは買い物に便利です。
+この本は、大人には易いです。しかし、子供には難しいです。　（基准、对比）
+#### 3.动词（基本型）+　のに
+*动词 （基本型）+の　形式名词。 语法同2*
+この写真はパスポートを申請するのに使います。
+このフライパンは卵焼きを作るのに使います。
+この写真はパスポートの申請に使います。
+このマンションは買い物するのに便利です。
+この服はパーティーに参加するのに着る服です。
+#### 4. 名词、动词て形 + ばかり
+*名词+ばかり　表示列举的事物全部相同*
+なんで野菜ばかり食べているんですか？　今、ダイエット中なんです。
+林さんはカラオケで古い歌ばかり歌います。
+*动词て+ばかりいます　表示总是发生同样的事情 或总是进行同样的动作*
+毎日お酒を飲んでばかりいます。
+森さんはいつも失敗してばかりいます。　　*林总是出一些问题*
+森さんはいつも果物を食べてばかりいます。　　森さんは果物ばかり食べます。
+小林　こばやし
+*总结
+数量+ばかり　　 表示左右
+数量+だけ　　　表示限定
+ばかり不可以+否地        　ばかり表示反复做某事，反复没做×
+だけ可以加否定  只~没有~~  
+て　＋　ばかり表示反复， て＋ばかり 没有这种用法
+ばかり有一中感情色彩（不太理想 ）   ゲームばかりやってる*
+#### 5. 小句（动词简体形）のが　＋　見えます・聞こえます
+見えます　       能够看见，自动
+聞こえます　　能够听见，自动
+*形式名词　が見える、が聞こえる*
+空港の入口に警官が立っているのが見えます。
+隣の部屋で子供たちが騒いでいるのが聞こえますか。
+彼が車に乗ったのが見えました。
+*一类形容词+の　　二类形+な＋の*
+森さんがうれしいのがわかります。
+日本語が簡単なのがよく分かりました。
+#### 表达
++ 凧　　风筝
++ ほんと　　本当　ほんとう
++ とにかく　　*有限陈列某事、总之*
++ べらべら        *非常的6*
++ 日文中的拟声词  　　擬音語　ぎおんご　　　　擬態語　ぎたいご　　　ワンワン、ザーザー、すやすや、くねくね
++ 量り売り　はかりうり
+宿題
+森さんはいつも女性とばかり話します。
+森は女性と学校のドアの隣で遊んでいるのが見えましたよ。
