--- a/日语/新标日/知识点/动词变形.md
+++ b/日语/新标日/知识点/动词变形.md
@@ -92,3 +92,32 @@
 *以す结尾，基本就是他动，以え段+る结尾基本就是他动*
 他动： 壊す　    消す　　　　掛ける　　　止める
 自动： 壊れる　消える　　　掛かる
+### 假定形
+*假定形*
+*一类： う　ー＞　え＋ば*
+書くー書けば　急ぐー急げば　飛ぶー飛べば　死ぬー死ねば　待つー待てば
+*二类：る　ー＞　れば*
+食べるー食べれば　寝るー寝れば
+*三类：来るー来れば（くれば）　　するー＞すれば*
+*一类形容词 　いー＞ければ*
+ないー＞なければ　　楽しいー＞楽しければ
+*二类形  ＋　であれば*
+綺麗ー＞綺麗であれば　　親切ー＞親切であれば
+### 可能性
+*可能形可以活用，与二类词相同，可以当成全新的一个动词*
+*一类：うー＞えるー＞えます*
+書くー＞書ける　書けます　　　　話すー話せるー話せます
+*二类：るー＞られるー＞られます*
+*三类：くるー＞くられる　　するー＞できる*　
+散歩するー＞散歩できるー散歩できます
+```
++ 什么是可能形
+可能形式 我能够~~ ，我可以~~ 。 而假定形是如果~~
++ 可能形为什么还可以变形
+当成是全新的动词看待
++ 可能形和 ことができます
+基本可以换着用，日本人更偏向于使用可能形。  下面两种情况不可以
+このナイフはよく切れる　　（某物品具有的性能）
+言うに言われない　　　*惯用句*
+```
+使用ことができます时动词前面的助词通常不发生变化，而用可能形时 を　常常变成 が
