--- a/日语/新标日/新标日下/第七单元/第二十七课.md
+++ b/日语/新标日/新标日下/第七单元/第二十七课.md
@@ -69,7 +69,7 @@
 飛先生の授業の時、私はこっそりパンを食べた。
 飛先生が授業をしている時、私はこっそりパンを一口食べました。　　ひとくち　　一口
 この前、友達が病気の時に、私は看病しました。
-#### 2.动词ながら　动词~~
+#### 2.动词（连体形）ながら　动词~~
 *表示同时进行两个动作，后面的动词是主要动作。 动词的ます改为ながら（连体形）*
 李さんはテレビを見ながら食事をしています。
 このことを考えながら歩いていました。
