--- a/日语/新标日/知识点/动词变形.md
+++ b/日语/新标日/知识点/动词变形.md
@@ -50,7 +50,7 @@
 行く　ー　行って　*特例*　いく
 
 勉強する　勉強して、見る　見て、帰る　帰って、==行く　行って==、　好む（このむ）好んて、　呼ぶ　呼んで、　急ぐ　急いで
-#### た形
+### た形
 *同て形，只是把て变成た，で变成だ*
 
 宿題
@@ -121,3 +121,11 @@
 言うに言われない　　　*惯用句*
 ```
 使用ことができます时动词前面的助词通常不发生变化，而用可能形时 を　常常变成 が
+### 1.被动形式
+```
+一类：う段->あ＋れる、うーわ
+二类：去る　＋　られる
+三类：くる->来られる　（こられる）　　するーされる
+```
+書くー書かれる　くるー来られる　飛ぶー飛ばれる　散歩するー散歩される
+死ぬー死なれる　見るー見られる　売るー売られる　食べるー食べられる　話すー話される
