--- a/日语/错题集/N5-N4.md
+++ b/日语/错题集/N5-N4.md
@@ -1,14 +1,25 @@
 + 週さんはわたしに中国のお土産を~~あげました~~くれました。
-「あげる」是用于说话者给别人东西。而在这个句子中，应该是别人（週さん）给说话者（我）东西，因此应该用「くれる」。
+*「あげる」是用于说话者给别人东西* 而在这个句子中，应该是别人（週さん）给说话者（我）东西，因此应该用「くれる」。
 
 + 田中さんは傘を貸して~~もらいました~~くれました。
-用「もらいました」应该用助词に。这里助词は表示田中借给我了伞 应该用 「くれました」
+*用「もらいました」应该用助词に*。这里助词は表示田中借给我了伞 应该用 「くれました」
 
 + 男の人はわたしに道を教えて~~もらいました~~くれました。
-「もらいました」的主语应该是我，从男子那边问到了路，应该是「私わ男の人に道を教えてもらいました」。这里的主语是男子，表示男子教给我了路，应该用くれました
+*「もらいました」的主语应该是我*，从男子那边问到了路，应该是「私わ男の人に道を教えてもらいました」。这里的主语是男子，表示男子教给我了路，应该用くれました
 
 + 朝、公園~~に~~を通った時、大勢の人が踊っているのを見ました。
-「を」通过、离开一个场所用通过
+*「を」通过、离开一个场所用通过*
 
 地図　ちず
 上着　うわぎ
+
++ ばかり　・　动词たところ
+*~たばかりです　动作结束后，==经过了较长的一段时间*==
+*~たところです、动作结束后 ==经过的时间极短
+
++ ～に行く
+*去做某事，前面如果是动词的话需要使用去ます的连用型*  きめた
+
++ 衣物和动词
+*ネクタイをします　　靴を履く　　帽子を被る　かぶる*
+
