--- a/日语/新标日/知识点/动词变形.md
+++ b/日语/新标日/知识点/动词变形.md
@@ -121,7 +121,7 @@
 言うに言われない　　　*惯用句*
 ```
 使用ことができます时动词前面的助词通常不发生变化，而用可能形时 を　常常变成 が
-### 1.被动形式
+### 被动形式
 ```
 一类：う段->あ＋れる、うーわ
 二类：去る　＋　られる
@@ -129,3 +129,17 @@
 ```
 書くー書かれる　くるー来られる　飛ぶー飛ばれる　散歩するー散歩される
 死ぬー死なれる　見るー見られる　売るー売られる　食べるー食べられる　話すー話される
+
+### 使役形
+```
+一类：う->あ＋せる
+二类： 去る　＋　させる
+三类： 来る　—> こさせる　　する　ー　させる
+```
+### 使役被动
+```
+一类：う->あ＋さられる　　さらーさ　　　うー＞あされる
+二类：去る　＋　させられる
+三类：来るーこさせられる　　するーさせられる
+
+```
